# mandelbrot-set

./: .ccls  .gitignore  CMakeLists.txt  README.md  compile.sh  compile_commands.json  grid.h  main.cpp  mandelbrot_set.h  render.h  unrolled_matrix.h
include/plane/: plane.h
include/shader_header/: shader.h
include/texture_header/: texture.h
include/tile/: tile.h
include/util/: timer.hpp
shaders/: shader.fs  shader.vs
